--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "qrcodejs2": "^0.0.2",
-    "vant": "^2.10.8",
+    "qrcodejs2": "0.0.2",
+    "vant": "^2.10.9",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
