--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "less": "^3.12.2",
+    "less-loader": "^4.1.0",
     "qrcodejs2": "0.0.2",
     "vant": "^2.10.9",
     "vue": "^2.5.2",
